1.5.0 Full support for non-combined mode: - Non-combined mode: Better color for active article row - Non-combined mode: Fixed icon color in article rows - Non-combined mode: Fixed article text color - Non-combined mode: Fixed unread article title color - Slightly darker color for active article text - FeedMei+.css: Letter-spacing for article text - FeedMei+.css: <h3> font-size

--- a/themes.local/feedmei+.css
+++ b/themes.local/feedmei+.css
@@ -34,8 +34,12 @@ div.cdm.expanded {
 .content-inner,
 .content-inner :not(h3),
 .post .content,
-.post .content :not(h3) { font-family: Amasis, "PT Serif", "PT Sans", serif !important }
+.post .content :not(h3) {
+	font-family: Amasis, "PT Serif", "PT Sans", serif !important;
+	letter-spacing: -.005em;
+}
 
+body.ttrss_main h3,
 .content-inner p,
 .post .content p { font-size: 17px }
 
